--- a/index.html
+++ b/index.html
@@ -10,59 +10,52 @@
 </head>
 <body>
 
+ <!-- create new post -->
+  <body>
+    <div class="container-fluid">
+    <nav class="navbar navbar-light bg-light">
+        
+        <a class="navbar-brand"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
+        <div class="form-inline"> 
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Create New Post
+            </button>
 
-    <!-- instagram tag -->
-    <div class="instaTag">
-        <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <i class="fa fa-instagram" aria-hidden="true"></i>
-            Instagram
-        </a>
-     
-
-    <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" id="create" data-toggle="modal" data-target="#exampleModal">
-  Create a new post
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-body">
-        <form class="was-validated">
-            <div class="mb-3">
-                <textarea class="form-control is-invalid" id="validationTextarea" placeholder="Required example textarea" required></textarea>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                <div class="modal-body">
+                    <textarea> </textarea>
+                    <div class = "modalicons">
+                        <div class="icon"><i class="fa fa-camera"></i></div>
+                        <div class="icon"><i class="fa fa-map-marker"></i></div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary">Publish</button>
+                </div>
+                </div>
             </div>
-            <div class="icons">
-                <i class="fa fa-camera" aria-hidden="true"></i>
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
             </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary">Publish</button>
-      </div>
-    </div>
-  </div>
-</div>
-   
+            <div class="dropdown ml-2">
+                <button class="btn btn-secondary dropdown-toggle ml-2" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-cog"> </i>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#"> Log Out </a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 
-<div class="dropdown">
-  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    <i class="fa fa-cog" aria-hidden="true"></i>
-  </a>
-
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-    <a class="dropdown-item logout" href="#">Logout</a>
-  </div>
-</div>
-</nav>
-    </div>
 
 
 <!-- PILLS -->
@@ -138,8 +131,8 @@
   <!-- LIST  --> 
   <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
   <!-- card 1 -->
-  <div class="list">
-    <div class="card" style="width: 40rem;">
+  <div class="list" style="border: 1px red; width:100%;">
+    <div class="card" style="width: 40rem; margin: auto;">
         <h5 class="card-title">My first photo </h5>
         <img src="https://loremflickr.com/300/300/dog" class="card-img-top" alt="...">
         <div class="card-body">
